--- a/front-webApp/css/style_assignment.css
+++ b/front-webApp/css/style_assignment.css
@@ -12,9 +12,9 @@ body{
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 .app-header {
-    line-height: 1;
-    border-bottom: 1px solid #e5e5e5;
-    background-color: #f9f9f9;
+	line-height: 1;
+	border-bottom: 1px solid #e5e5e5;
+	background-color: #f9f9f9;
 }
 .app-header-logo {
 	color: #dd3247;
@@ -26,14 +26,28 @@ body{
 	margin-top: 5px;
 	background: #fff;
 }
-
+.btn-add{
+	border:0;
+	border-radius: 0;
+	-webkit-transition: all 0.8s;
+	transition: all 0.8s;
+	max-width: 60px;
+	max-height: 30px;
+	color: #dd3247;
+}
+.btn-assigntype{
+	border:0;
+	max-width: 60px;
+	max-height: 30px;
+	color: #fff;
+	background: #dd3247;
+}
 .btn-logout{
 	border-radius: 0;
 	background: #dd3247;
 	color: #fff;
 	-webkit-transition: all 0.8s;
 	transition: all 0.8s;
-	font-size: 10px;
 	max-width: 60px;
 	max-height: 30px;
 }
@@ -46,12 +60,12 @@ body{
 	max-height: 30px;
 }
 .app-footer {
-    line-height: 1;
-    border-top: 1px solid #e5e5e5;
-    padding: 2.5rem 0;
-    color: #999;
-    text-align: center;
-    background-color: #f9f9f9;
+	line-height: 1;
+	border-top: 1px solid #e5e5e5;
+	padding: 2.5rem 0;
+	color: #999;
+	text-align: center;
+	background-color: #f9f9f9;
 }
 .btn-icon{
 	border: 0;
@@ -68,3 +82,49 @@ body{
 
 }
 
+.assignment-all{
+	border:1;
+	background: #fff;
+	color : #6c757d;
+}
+
+.assign-each{
+	border: 0;
+	background: #f5f5f5;
+	margin: 10px;
+}
+
+
+.scrollbar-track::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+	background-color: #F5F5F5;
+	border-radius: 10px; }
+
+.scrollbar::-webkit-scrollbar {
+	width: 8px;
+	background-color: #F5F5F5; }
+
+.scrollbar-thumb::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background-color : #dd3247;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+}
+
+
+/*::-webkit-scrollbar {
+    width: 12px;
+    max-height : 300px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(200,200,200,1);
+    border-radius: 10px;
+    max-height : 300px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color:#fff;
+    -webkit-box-shadow: inset 0 0 6px rgba(90,90,90,0.7);
+    max-height : 300px;
+    }*/
