--- a/front-webApp/css/style_home.css
+++ b/front-webApp/css/style_home.css
@@ -22,8 +22,6 @@ body{
 }
 
 .main-area{
-	margin-bottom: 5px;
-	margin-top: 5px;
 	background: #fff;
 }
 
@@ -80,17 +78,17 @@ body{
 	font-size: 12px;
 }
 
-::-webkit-scrollbar {
-    width: 12px;
-}
+.scrollbar-track::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #F5F5F5;
+  border-radius: 10px; }
 
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(200,200,200,1);
-    border-radius: 10px;
-}
+.scrollbar::-webkit-scrollbar {
+  width: 8px;
+  background-color: #F5F5F5; }
 
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color:#fff;
-    -webkit-box-shadow: inset 0 0 6px rgba(90,90,90,0.7);
+.scrollbar-thumb::-webkit-scrollbar-thumb {
+ border-radius: 10px;
+ background-color : #dd3247;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
 }
