css에 설명 주석 추가

--- a/front-webApp/css/style_assignment.css
+++ b/front-webApp/css/style_assignment.css
@@ -11,21 +11,24 @@ body{
 	padding: 0px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
+/*상단바*/
 .app-header {
 	line-height: 1;
 	border-bottom: 1px solid #e5e5e5;
 	background-color: #f9f9f9;
 }
+/*상단바에 PATH 로고*/
 .app-header-logo {
 	color: #dd3247;
 	margin :8px;
 }
-
+/*상단,하단 바 제외한 가운데 영역*/
 .main-area{
 	margin-bottom: 5px;
 	margin-top: 5px;
 	background: #fff;
 }
+/*과제 추가버튼*/
 .btn-add{
 	border:0;
 	border-radius: 0;
@@ -35,6 +38,7 @@ body{
 	max-height: 30px;
 	color: #dd3247;
 }
+/*팀과제인지 개인가제인지 선택하는 btngroup*/
 .btn-assigntype{
 	border:0;
 	max-width: 60px;
@@ -42,15 +46,19 @@ body{
 	color: #fff;
 	background: #dd3247;
 }
-.btn-logout{
-	border-radius: 0;
-	background: #dd3247;
-	color: #fff;
-	-webkit-transition: all 0.8s;
-	transition: all 0.8s;
+/*로그아웃 버튼*/
+.btn-log-out{
+	border: 0;
+	margin-left: 25px;
+	margin-top: 10px;
+	align-content: right;
+	background: #f9f9f9;
+	color: #6c757d;
 	max-width: 60px;
 	max-height: 30px;
+
 }
+/*로그아웃 버튼에 마우스 올릴 때*/
 .btn-logout:hover{
 	border-radius: 0;
 	background: transparent;
@@ -59,6 +67,7 @@ body{
 	max-width: 60px;
 	max-height: 30px;
 }
+/*하단바 */
 .app-footer {
 	line-height: 1;
 	border-top: 1px solid #e5e5e5;
@@ -67,48 +76,38 @@ body{
 	text-align: center;
 	background-color: #f9f9f9;
 }
+/*하단 바 아이콘*/
 .btn-icon{
 	border: 0;
 	background: #f9f9f9;
 	color: #6c757d;
 }
-.btn-log-out{
-	border: 0;
-	margin-left: 25px;
-	margin-top: 10px;
-	align-content: right;
-	background: #f9f9f9;
-	color: #6c757d;
-
-}
-
+/*모든 과제 보여주는 영역*/
 .assignment-all{
 	border:1;
 	background: #fff;
 	color : #6c757d;
 }
 
+/*과제 하나 하나에 대한 영역*/
 .assign-each{
 	border: 0;
 	background: #f5f5f5;
 	margin: 10px;
 }
 
-
+/*스크롤바 속성*/
 .scrollbar-track::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
 	background-color: #F5F5F5;
 	border-radius: 10px; }
-
 .scrollbar::-webkit-scrollbar {
 	width: 8px;
 	background-color: #F5F5F5; }
-
 .scrollbar-thumb::-webkit-scrollbar-thumb {
 	border-radius: 10px;
 	background-color : #dd3247;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-}
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);}
 
 
 /*::-webkit-scrollbar {
