--- a/front-webApp/css/style_assignment.css
+++ b/front-webApp/css/style_assignment.css
@@ -36,6 +36,7 @@ body{
 	transition: all 0.8s;
 	max-width: 60px;
 	max-height: 30px;
+	background: #fff;
 	color: #dd3247;
 }
 /*팀과제인지 개인가제인지 선택하는 btngroup*/
