--- a/front-webApp/css/style_assignment_add.css
+++ b/front-webApp/css/style_assignment_add.css
@@ -26,3 +26,23 @@ body{
 	color: #dd3247;
 }
 
+.flat-input{
+	margin-top: 20px;
+	border: none;
+	border-radius: 0;
+	border-bottom: 1px solid #dd3247;
+	-webkit-transition: all 0.5s;
+	transition: all 0.5s;
+	background: -webkit-linear-gradient(top, rgba(255,255,255,0) 96%, #dd3247 4%);
+	background: linear-gradient(to bottom , rgba(255,255,255,0) 96%, #dd3247 4%);
+	background-position: -500px 0;
+	background-size: 100% 100%;
+	background-repeat: no-repeat; 
+}
+/*input 영역 클릭 했을 때*/
+.flat-input:focus{
+	box-shadow: none;
+	outline: none;
+	background-position: 0 0;
+	border-bottom: 0px;
+}
