--- a/front-webApp/css/style_menu.css
+++ b/front-webApp/css/style_menu.css
@@ -1,7 +1,8 @@
 body{
 	/*
 	background: #dd3247;
-	padding-top: 10%;*/
+	padding-top: 10%;
+	*/
 }
 .wdi-red{
 	color: #dd3247;
@@ -10,6 +11,7 @@ body{
 	background: #fff;
 	padding: 0px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
 }
 
 /*상단,하단 바 제외한 가운데 영역*/
