시간표 ui,기능 수정 중

--- a/front-webApp/css/style_timetable.css
+++ b/front-webApp/css/style_timetable.css
@@ -4,7 +4,8 @@
 	color : #6c757d;
 	font-size: 12px;
 	height: 100px;
+	border : 1px solid #e5e5e5;
 }
-.middle-time{
-	color : #fff;
+.stripe-top{
+	border-top: 1px solid #e5e5e5;
 }
