--- a/front-webApp/css/style_timetable_page.css
+++ b/front-webApp/css/style_timetable_page.css
@@ -38,28 +38,48 @@ body{
 }
 .btn-add{
 	border:0;
+	outline: none;
 	-webkit-transition: all 0.8s;
 	transition: all 0.8s;
 	font-weight: bold;
 	background: #fff;
 }
-.btn-add:hover{
+.btn-add:hover,.btn-add:focus{
+	border:0;
+	outline: none;
 	font-weight: bold;
 	background: #fff;
+	color: #dd3247;
 }
 .btn-addSub{
+	font-weight: bold;
+	border-radius: 0;
 	box-shadow: none;
-	color: #dd3247;
+	outline: none;
+	border-color: #d5d5d5;
 	font-size: 11px;
-	color: black;
+	background: #fff;
+	margin: 10px;
 }
-.lowerbarCollapse{
+.btn-addSub:hover,.btn-addSub:focus{
+	font-weight: bold;
+	border-radius: 0;
+	box-shadow: none;
+	outline: none;
+	border-color: #d5d5d5;
+	font-size: 11px;
+	background: #fff;
+	margin: 10px;
+	color: #dd3247;
 }
-#topbar {
-	display: none;
+.upperbarCollapse,.upperbarCollapse:focus{
+	color: #6c757d;
 }
-#topbar.active {
-	transition: all 0.5s;
+.lower-card{
+	background: #f2f2f2;
+}
+.upper-card{
+	background: #f9f9f9;
 }
 .overlay {
     top: 0%;
@@ -69,28 +89,20 @@ body{
     display: none;
 }
 
-
-
-/*tatable_add 에서 가져온 거 */
 .list-group-item{
-	border-radius: 0;
 	font-size: 12px;
 	font-weight: bold;
-	background: #e5e5e5;
+	box-shadow: none;
 }
-.form-group{
-	background: #fff;
-}
-.form-add{	
-	display: none;
-	background: #fff;
-}
-.form-add.active{
-	background: #fff;
+.list-group-item:hover,.list-group-item:focus{
+	font-size: 12px;
+	font-weight: bold;
+	box-shadow: none;
+	color: #dd3247;
 }
 .label{
 	text-align: left;
-	font-size: 10px;
+	font-size: 11px;
 	font-weight: bold;
 }
 .input{
@@ -106,4 +118,20 @@ body{
 	background-position: -500px 0;
 	background-size: 100% 100%;
 	background-repeat: no-repeat; 
+}
+#sHour,#eHour,#sMinute,#eMinute,.dropdown-menu,
+#sHour:focus,#eHour:focus,#sMinute:focus,#eMinute:focus,.dropdown-menu:focus{
+	background: #fff;
+	box-shadow: none;
+	outline: none;
+	font-size: 10px;
+}
+.time-label{
+	padding-top:6.6px; 
+	text-align: left;
+	font-size: 10px;
+	font-weight: bold;
+}
+.btn-submit{
+	width: 100%;
 }
