시간표 선택한 요일,시간별로 색칠가능(텍스트 입력은 아직!)

--- a/front-webApp/css/style_timetable_page.css
+++ b/front-webApp/css/style_timetable_page.css
@@ -75,20 +75,12 @@ body{
 .upperbarCollapse,.upperbarCollapse:focus{
 	color: #6c757d;
 }
-.lower-card{
+.card-plus{
 	background: #f2f2f2;
 }
-.upper-card{
+.card-directly{
 	background: #f9f9f9;
 }
-.overlay {
-    top: 0%;
-    height: 60%;
-    background: rgba(0, 0, 0, 0.7);
-    z-index: 998;
-    display: none;
-}
-
 .list-group-item{
 	font-size: 12px;
 	font-weight: bold;
