--- a/front-webApp/css/style_join.css
+++ b/front-webApp/css/style_join.css
@@ -30,7 +30,7 @@ body{
 	box-shadow: none;
 	outline: none;
 	background-position: 0 0;
-	border-bottom: 0px;
+	border-bottom: 1px solid #dd3247;
 }
 /*input영역 옆에 label*/
 .label{
