회원가입수정중

--- a/front-webApp/css/style_index.css
+++ b/front-webApp/css/style_index.css
@@ -31,7 +31,7 @@ body{
 	box-shadow: none;
 	outline: none;
 	background-position: 0 0;
-	border-bottom: 0px;
+	border-bottom: 1px solid #dd3247;
 }
 /*로그인 버튼*/
 .btn-login{
