--- a/front-webApp/css/style_assignment_add.css
+++ b/front-webApp/css/style_assignment_add.css
@@ -47,7 +47,7 @@ body{
 
 /*input 영역*/
 .flat-input{
-	box-shadow: none;
+	margin-top: 20px;
 	border: none;
 	border-radius: 0;
 	border-bottom: 1px solid #dd3247;
@@ -57,7 +57,7 @@ body{
 	background: linear-gradient(to bottom , rgba(255,255,255,0) 96%, #dd3247 4%);
 	background-position: -500px 0;
 	background-size: 100% 100%;
-	background-repeat: no-repeat;
+	background-repeat: no-repeat; 
 }
 /*input 영역 클릭 했을 때*/
 .flat-input:focus{
