--- a/phonegap_front_webApp/www/css/style_find_subject.css
+++ b/phonegap_front_webApp/www/css/style_find_subject.css
@@ -92,3 +92,13 @@ body{
 .stripe-top{
 	border-top: 1px solid #e5e5e5;
 }
+
+table.row-clickable tbody tr td {
+    padding: 0;
+}
+
+table.row-clickable tbody tr td a {
+    display: block;
+    padding: 8px;
+}
+#table_findSub tr:hover {cursor: pointer;}
