--- a/phonegap_front_webApp/www/css/style_home.css
+++ b/phonegap_front_webApp/www/css/style_home.css
@@ -3,21 +3,19 @@ body{
 	background: #dd3247;
 	padding-top: 10%;*/
 }
-.wdi-red{
-	color: #dd3247;
-}
-.login-box{
+
+.login_box{
 	background: #fff;
 	padding: 0px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 /*상단,하단 바 제외한 가운데 영역*/
-.main-area{
+.main_area{
 	background: #fff;
 }
 /*로그아웃 버튼*/
-.btn-log-out{
+.btn_logout{
 	border: 0;
 	margin-left: 25px;
 	margin-top: 10px;
@@ -28,7 +26,7 @@ body{
 	max-height: 30px;
 }
 /*로그아웃 버튼에 마우스 올릴 때*/
-.btn-logout:hover{
+.btn_logout:hover{
 	border-radius: 0;
 	background: transparent;
 	border: 1px solid #dd3247;
@@ -38,7 +36,7 @@ body{
 }
 
 /*과제 보여주는 작은 영역*/
-.preview-assignment{
+.content_preview_assignment{
 	border:1;
 	background: #fff;
 	margin-top: 10px;
@@ -46,7 +44,7 @@ body{
 }
 
 /*스크롤바 속성*/
-.scrollbar-track::-webkit-scrollbar-track {
+.scrollbar_track::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
   background-color: #F5F5F5;
   border-radius: 10px; }
@@ -55,7 +53,7 @@ body{
   width: 8px;
   background-color: #F5F5F5; }
 
-.scrollbar-thumb::-webkit-scrollbar-thumb {
+.scrollbar_thumb::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color : #dd3247;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
