--- a/phonegap_front_webApp/www/css/style_join.css
+++ b/phonegap_front_webApp/www/css/style_join.css
@@ -3,16 +3,16 @@ body{
 	background: #dd3247;
 	padding-top: 10%;*/
 }
-.wdi-red{
+.wdi_red{
 	color: #dd3247;
 }
-.login-box{
+.login_box{
 	background: #fff;
 	padding: 50px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 /*input 영역*/
-.flat-input{
+.flat_input{
 	margin-top: 20px;
 	border: none;
 	border-radius: 0;
@@ -26,20 +26,19 @@ body{
 	background-repeat: no-repeat; 
 }
 /*input 영역 클릭 했을 때*/
-.flat-input:focus{
+.flat_input:focus{
 	box-shadow: none;
 	outline: none;
 	background-position: 0 0;
 	border-bottom: 1px solid #dd3247;
 }
 /*input영역 옆에 label*/
-.label{
+.label_input{
 	margin-top: 35px;
 	color: #dd3247;
 }
 /*가입 완료 버튼*/
-.btn-join {
-	margin-top: 30px;
+.btn_join {
 	border-radius: 0;
 	background: #dd3247;
 	color: #fff;
@@ -47,40 +46,27 @@ body{
 	transition: all 0.8s;
 }
 /*가입 완료 버튼 클릭 했을 때*/
-.btn-join:hover{
-	margin-top: 30px;
+.btn_join:hover{
 	background: transparent;
 	border: 1px solid #dd3247;
 	color: #dd3247;
 }
 /*가입 취소 버튼*/
-.btn-cancel {
-	margin-top: 30px;
+.btn_cancel {
 	border-radius: 0;
-	background: #dd3247;
+	background: gray;
 	color: #fff;
 	-webkit-transition: all 0.8s;
 	transition: all 0.8s;
 }
 /*가입 취소 버튼 클릭 했을 때*/
-.btn-cancel:hover{
-	margin-top: 30px;
+.btn_cancel:hover{
 	background: transparent;
-	border: 1px solid #dd3247;
-	color: #dd3247;
+	border: 1px solid gray;
+	color: gray;
 }
 /*학년 선택 dropdown*/
-.dropdown-grade{
-	position: relative;
-	margin-top: 30px;
-	margin-bottom: 15px;
-	font-size: 13px;
-	background: #fff;
-	color: #dd3247;
-	border: 1px solid #dd3247;
-}
-/*학기 선택 dropdown*/
-.dropdown-semester{
+.dropdown_semester{
 	position: relative;
 	margin-top: 30px;
 	margin-bottom: 15px;
