--- a/phonegap_front_webApp/www/css/style_mypage.css
+++ b/phonegap_front_webApp/www/css/style_mypage.css
@@ -3,23 +3,23 @@ body{
 	background: #dd3247;
 	padding-top: 10%;*/
 }
-.wdi-red{
+.wdi_red{
 	color: #dd3247;
 }
-.login-box{
+.login_box{
 	background: #fff;
 	padding: 0px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 /*상단,하단 바 제외한 가운데 영역*/
-.main-area{
+.main_area{
 	margin-bottom: 5px;
 	margin-top: 5px;
 	background: #fff;
 }
 /*로그아웃 버튼*/
-.btn-log-out{
+.btn_logout{
 	border: 0;
 	margin-left: 25px;
 	margin-top: 10px;
@@ -30,7 +30,7 @@ body{
 	max-height: 30px;
 }
 /*로그아웃 버튼에 마우스 올릴 때*/
-.btn-logout:hover{
+.btn_logout:hover{
 	border-radius: 0;
 	background: transparent;
 	border: 1px solid #dd3247;
@@ -51,7 +51,7 @@ body{
 	box-shadow: none;
 	color: #dd3247;
 }
-.user-icon{
+.user_icon{
 	font-size:40px; 
 	color: gray;
 }
