--- a/phonegap_front_webApp/www/css/style_timetable_page.css
+++ b/phonegap_front_webApp/www/css/style_timetable_page.css
@@ -3,21 +3,18 @@ body{
 	background: #dd3247;
 	padding-top: 10%;*/
 }
-.wdi-red{
-	color: #dd3247;
-}
-.login-box{
+.login_box{
 	background: #fff;
 	padding: 0px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 /*상단,하단 바 제외한 가운데 영역*/
-.main-area{
+.main_area{
 	background: #fff;
 }
 /*로그아웃 버튼*/
-.btn-log-out{
+.btn_logout{
 	border: 0;
 	margin-left: 25px;
 	margin-top: 10px;
@@ -28,7 +25,7 @@ body{
 	max-height: 30px;
 }
 /*로그아웃 버튼에 마우스 올릴 때*/
-.btn-logout:hover{
+.btn_logout:hover{
 	border-radius: 0;
 	background: transparent;
 	border: 1px solid #dd3247;
@@ -36,7 +33,7 @@ body{
 	max-width: 60px;
 	max-height: 30px;
 }
-.btn-add{
+.btn_add{
 	border:0;
 	outline: none;
 	-webkit-transition: all 0.8s;
@@ -44,14 +41,14 @@ body{
 	font-weight: bold;
 	background: #fff;
 }
-.btn-add:hover,.btn-add:focus{
+.btn_add:hover,.btn_add:focus{
 	border:0;
 	outline: none;
 	font-weight: bold;
 	background: #fff;
 	color: #dd3247;
 }
-.btn-addSub{
+.btn_add_sub{
 	font-weight: bold;
 	border-radius: 0;
 	box-shadow: none;
@@ -61,7 +58,7 @@ body{
 	background: #fff;
 	margin: 10px;
 }
-.btn-addSub:hover,.btn-addSub:focus{
+.btn_add_sub:hover,.btn_add_sub:focus{
 	font-weight: bold;
 	border-radius: 0;
 	box-shadow: none;
@@ -75,10 +72,10 @@ body{
 .upperbarCollapse,.upperbarCollapse:focus{
 	color: #6c757d;
 }
-.card-plus{
+.card_plus{
 	background: #f2f2f2;
 }
-.card-directly{
+.card_directly{
 	background: #f9f9f9;
 }
 .list-group-item{
@@ -92,7 +89,7 @@ body{
 	box-shadow: none;
 	color: #dd3247;
 }
-.label{
+.label_input{
 	text-align: left;
 	font-size: 11px;
 	font-weight: bold;
@@ -120,12 +117,12 @@ body{
 	padding-top:3px;
 	padding-bottom:3px;
 }
-.time-label{
+.time_label{
 	padding-top:6.6px; 
 	text-align: left;
 	font-size: 10px;
 	font-weight: bold;
 }
-.btn-submit{
+.btn_submit{
 	width: 100%;
 }
