화면 늘림, script는 모두 body밖으로 빼놨음!

--- a/PathPractice/src/main/webapp/resources/css/style_home.css
+++ b/PathPractice/src/main/webapp/resources/css/style_home.css
@@ -1,9 +1,6 @@
-body{
-	/*
-	background: #dd3247;
-	padding-top: 10%;*/
+.container{
+	max-width : none;
 }
-
 .login_box{
 	background: #fff;
 	padding: 0px;
