--- a/PathPractice/src/main/webapp/resources/css/style_index.css
+++ b/PathPractice/src/main/webapp/resources/css/style_index.css
@@ -1,7 +1,5 @@
-body{
-	/*
-	background: #dd3247;
-	padding-top: 10%;*/
+.container{
+	max-width : none;
 }
 .wdi_red{
 	color: #dd3247;
@@ -10,7 +8,7 @@ body{
 .login_box{
 	background: #fff;
 	padding: 50px;
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); 
 }
 /*input 영역*/
 .flat_input{
