팀과제 추가 페이지, 과제 미리보기 기능 추가

--- a/PathPractice/src/main/webapp/resources/css/style_assignment_add.css
+++ b/PathPractice/src/main/webapp/resources/css/style_assignment_add.css
@@ -64,7 +64,10 @@
 	background-position: 0 0;
 	border-bottom: 1px solid #dd3247;
 }
-
+#btn_add_member{
+	box-shadow: none;
+	box-sizing: 10px;
+}
 .label_input{
 	color: #dd3247;
 	font-size: 14px;
