네모, 공지사항 글씨 넘침, 과목명 있어야 창 넘어가게, 과제창 드롭박스, 별 뒤로----- 해결

--- a/PathPractice/src/main/webapp/resources/css/style_assignment.css
+++ b/PathPractice/src/main/webapp/resources/css/style_assignment.css
@@ -114,4 +114,11 @@
 .scrollbar-thumb::-webkit-scrollbar-thumb {
 	border-radius: 10px;
 	background-color : #dd3247;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);}
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+}
+#sort{
+	border-color:#dd3247;
+	color: #dd3247;
+	background: #fff;
+	font-size: 9pt;
+}
