--- a/PathPractice/src/main/webapp/resources/css/style_announcement.css
+++ b/PathPractice/src/main/webapp/resources/css/style_announcement.css
@@ -15,7 +15,19 @@
 	margin-top: 5px;
 	background: #fff;
 }
-
+.btn_pop_announce:focus,
+.btn_pop_announce{
+	overflow:hidden;
+	box-shadow: none;
+	white-space: normal;
+	word-wrap: break-word;
+	font-size: 13px;
+	margin-bottom: 2px;
+}
+/* .btn_pop_announce:focus{
+	overflow:hidden;
+	box-shadow: none;
+} */
 .btn_add{
 	border:0;
 	border-radius: 0;
@@ -25,9 +37,6 @@
 	max-height: 30px;
 	background: #fff;
 	color: #dd3247;
-}
-.btn_pop_assignment{
-	
 }
 .btn_assign_type{
 	border:0;
