--- a/PathPractice/src/main/webapp/resources/css/style_announcement.css
+++ b/PathPractice/src/main/webapp/resources/css/style_announcement.css
@@ -18,95 +18,24 @@
 .btn_pop_announce:focus,
 .btn_pop_announce{
 	overflow:hidden;
-	box-shadow: none;
+	outline: none;
+	box-shadow: none; 
 	white-space: normal;
 	word-wrap: break-word;
 	font-size: 13px;
 	margin-bottom: 2px;
 }
-/* .btn_pop_announce:focus{
-	overflow:hidden;
-	box-shadow: none;
-} */
-.btn_add{
-	border:0;
-	border-radius: 0;
-	-webkit-transition: all 0.8s;
-	transition: all 0.8s;
-	max-width: 60px;
-	max-height: 30px;
-	background: #fff;
-	color: #dd3247;
-}
-.btn_assign_type{
-	border:0;
-	max-width: 60px;
-	max-height: 30px;
-	color: #fff;
-	background: #dd3247;
-	font-size: 9pt;
-}
-.btn_assign_type:focus{
-	border:0;
-	max-width: 60px;
-	max-height: 30px;
-	color: #dd3247;
-	background: #fff;
-	font-size: 9pt;
-	box-shadow : none;
-}
- 
-.btn-log-out{
-	border: 0;
-	margin-left: 25px;
-	margin-top: 10px;
-	align-content: right;
-	background: #f9f9f9;
-	color: #6c757d;
-	max-width: 60px;
-	max-height: 30px;
-
-}
- 
-.btn-logout:hover{
-	border-radius: 0;
-	background: transparent;
-	border: 1px solid #dd3247;
-	color: #dd3247;
-	max-width: 60px;
-	max-height: 30px;
-}
-
- 
+  
 .content_show_assign{
 	border:1;
 	background: #fff;
 	color : #6c757d;
 }
-
  
 .assign-each{
 	border: 0;
 	background: #f5f5f5;
 	margin: 10px;
-}
-.modal-body,
-.modal-title{
-	color: black;
-	justify-content: center;  
-}
-
-.flat_input{
-	margin-top: 20px;
-	border: none;
-	border-radius: 0;
-	border-bottom: 1px solid #dd3247;
-	-webkit-transition: all 0.5s;
-	transition: all 0.5s;
-	
-	background-position: -500px 0;
-	background-size: 100% 100%;
-	background-repeat: no-repeat; 
 }
 .label_input{
 	color: #dd3247;
@@ -119,7 +48,7 @@
 	border-radius: 10px; }
 .scrollbar::-webkit-scrollbar {
 	width: 8px;
-	background-color: #F5F5F5; }
+	background-color: #F5F5F5; } 
 .scrollbar-thumb::-webkit-scrollbar-thumb {
 	border-radius: 10px;
 	background-color : #dd3247;
