--- a/PathPractice/src/main/webapp/resources/css/style_assignment.css
+++ b/PathPractice/src/main/webapp/resources/css/style_assignment.css
@@ -25,6 +25,8 @@
 	max-height: 30px;
 	background: #fff;
 	color: #dd3247;
+	outline: none;
+	box-shadow: none; 
 }
 .btn_pop_assignment{
 	overflow:hidden;
@@ -44,7 +46,8 @@
 	color: #dd3247;
 	background: #fff;
 	font-size: 9pt;
-	box-shadow : none;
+	outline: none;
+	box-shadow: none; 
 }
  
 .btn-log-out{
@@ -116,9 +119,11 @@
 	background-color : #dd3247;
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
 }
-#sort{
+#sort, #sort:focus{
 	border-color:#dd3247;
 	color: #dd3247;
 	background: #fff;
 	font-size: 9pt;
+	outline: none;
+	box-shadow: none; 
 }
